Roman Festchook       roma@polesye.net                  27 Oct 2001
Simon Weijgers        simon@weijgers.com                16 Sep 1998-15 Nov 1999
Simon Wood                                               6 Jan 2000-12 Jan 2000
Thomas McWilliams     tgm9999@yahoo.com                 27 Aug 1999- 2 Apr 2001

-------------------------------------------------------------------------------

Sun May  5 23:11:33 BST 2002	Riley Williams <Riley@Williams.Name>

	* Verified that fs/elksfs/*.c is clean as far as `splint -weak`
	  is concerned. This also eliminated a fair chunk of redundant
	  code in the form of static functions that are only called if
	  BLOAT_FS is defined. However, as this section is not included
	  in the default configuration, this has probably not reduced
	  the code size, although this stands a better chance of actually
	  compiling after this cleanup.
	* Verified that current codebase both compiles and boots on
	  my 286 based laptop.

Sun May  5 20:41:02 BST 2002	Riley Williams <Riley@Williams.Name>

	* Verified that fs/minix/*.c is clean as far as `splint -weak`
	  is concerned. This also eliminated a fair chunk of redundant
	  code in the form of static functions that are only called if
	  BLOAT_FS is defined.
	* Verified that current codebase both compiles and boots on
	  my 286 based laptop.

Sun May  5 17:22:53 BST 2002	Riley Williams <Riley@Williams.Name>

	* Verified that fs/romfs/inode.c is now clean as far as
	  `splint -weak` is concerned, fixing several bugs in the
	  process, and also eliminating a fair chunk of redundant
	  code (three static functions that were only called if
	  BLOAT_FS was defined, but which were compiled in anyway).
	* Verified that current codebase both compiles and boots on
	  my 286 based laptop.

Sun May  5 10:59:11 BST 2002	Riley Williams <Riley@Williams.Name>

	* After much hassle and several false starts, reverted changes
	  I'd made as part of the ANSI'fication procedure. Sorry all.